refactor teams allTime
adding teamID to team all time

Update allTime.ts

cleaning up API's and adding EV stuff

Update allTime.ts

turned the docs.html back and not relied on AI slop. Changed allTime to included grouped or not grouped

forgot this

Didnt need the corrected_player_ratings

Just caused the table issues

adding better limiters

Adding v2 and v3 api, updated docs, add limit to goalie and player all time

API Upgrades

Teams - Added Sum of Seasons, Goals Diff, and Games Played

Player/Goalie - Added team(s) played for, and if the player is still active

Initial Commit for player and goalies

Adding All Time teams

adding teamID to goalies and players

allowing user to order however they want. As well as implementing MINGP for players and goalies

adding responses
